# Flask-SocketIO

./: .gitignore  .python-version  .travis.yml  CHANGELOG.md  CHANGES.md  MANIFEST.in  README.md  SECURITY.md  flask_socketio.py  post-request.json  pyproject.toml  sendreq.py  setup.cfg  setup.py  test_socketio.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: tests.yml
OLD/: .travis.yml  setup.py  test_socketio.py
OLD/docs/: Makefile  make.bat
OLD/flask_socketio/: __init__.py  test_client.py
docs/: api.rst  conf.py  deployment.rst  getting_started.rst  implementation_notes.rst  index-cn.rst  index.rst  intro.rst  make.bat  upgrading.rst
docs/_static/: README.md  custom.css  index.html
example/: .dockerignore  Dockerfile  app.1.py  app.py  app_namespace.py  requirements.txt  sessions.py  test.py
example-docker/: Dockerfile  Makefile  app.py  app_namespace.py
example-docker/templates/: index.html
example/docker/: Dockerfile  Makefile  readme.md  requirements.txt
example/templates/: index.html  sessions.html
flask_socketio/: __init__.py  cli.py  namespace.py  test.py  test_client.py
src/flask_socketio/: __init__.py  namespace.py  test_client.py
templates/: request.html
