[project]
name = "Flask-SocketIO"
version = "5.6.0"
authors = [
    { name = "Miguel Grinberg", email = "miguel.grinberg@gmail.com" },
]
description = "Socket.IO integration for Flask applications"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "Flask >= 2.1.0",
    "python-socketio >= 5.12.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/miguelgrinberg/flask-socketio"
"Bug Tracker" = "https://github.com/miguelgrinberg/flask-socketio/issues"

[project.optional-dependencies]
docs = [
    "sphinx",
]
dev = [
    "tox",
    "pytest",
    "pytest-cov",
    "redis",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"
