[metadata]
name = Flask-SocketIO
version = 5.1.1.dev0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Socket.IO integration for Flask applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/flask-socketio
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/flask-socketio/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Flask >= 0.9
    python-socketio >= 5.0.2

[options.packages.find]
where = src
